# MQServer

./: .gitattributes  Makefile.am  Makefile.in  aclocal.m4  client.c  client.h  config.h.in  configure  configure.in  dict.c  dotconf.c  hash.c  log.c  main.c  mqprotocol.txt  mqserver.cfg  sock.h  subdirconfig.m4  xds.m4
Client/: Makefile.am  Makefile.in  hash.c  testclient.c  testserver.c
Include/: admincli.h  authqueue.h  callback.h  client.h  conf.h  config.h.in  defines.h  dict.h  dns.h  getchar.h  log.h  messagequeue.h  mythread.h  packet.h  queuemanager.h  serversock.h  sock.h  tcprioq.h  xds.h  xds.h.in  xds_engine_xdr_mqs.h  xds_p.h
Libs/: Makefile.am  Makefile.in  buffer.c  decodepacket.c  encode.c  encodepacket.c  packet.c  protocol.c  sock.c  xds.c  xds_engine_xdr.c  xds_engine_xdr_mqs.c  xds_engine_xml.c  xds_version.c
Server/: Makefile.am  Makefile.in  admincli.c  authqueue.c  callback.c  client.c  conf.c  dns.c  log.c  main.c  messagequeue.c  mqserver.cfg  mythread.c  queuemanager.c  serversock.c  sock.c  testclient.c
adns/: Makefile  config.h
clients/: Makefile.am  Makefile.in  list.c  testclient.c
confuse/: Makefile.am  Makefile.in
lib/: Makefile.in  buffer.c  decodepacket.c  encodepacket.c  xds_engine_xml.c
lib/include/: buffer.h  defines.h  libmq.h  packet.h  simpleif.h  sock.h  xds.h
lib/src/: Makefile.am  Makefile.in  buffer.c  decodepacket.c  encodepacket.c  packet.c  simpleif.c  sock.c  sock.h  xds_engine_xdr_mqs.c
libevent/: Makefile.am  Makefile.in
libevent/sample/: Makefile.in
libevent/test/: Makefile.in
sqlite/www/: arch2.fig.bak
src/: Makefile.am  Makefile.in  admincli.c  callback.c  client.c  conf.c  dns.c  main.c  mqserver.cfg  prioq.c  serversock.c
